overflow fix

--- a/tradehub/app/components/acoesMain.css
+++ b/tradehub/app/components/acoesMain.css
@@ -135,7 +135,7 @@
 
 .acaoCardContainer {
   display: flex;
-  height: 50%;
+  height: 50vh;
   width: 100%;
   justify-content: center;
   flex-wrap: wrap;
