--- a/tradehub/app/components/investmentCardInfo.css
+++ b/tradehub/app/components/investmentCardInfo.css
@@ -12,8 +12,8 @@
 .investmentInfoContainer {
   display: flex;
   flex-direction: column;
-  height: 65vh;
-  width: 30vw;
+  height: 60vh;
+  width: 25vw;
   background-color: #2a2a2a;
   border-radius: 50px;
   box-shadow: 10px 10px 10px 5px rgba(0, 0, 0, 0.25);
@@ -69,7 +69,7 @@
 .investmentInfo span {
   display: flex;
   justify-content: space-between;
-  padding-bottom: 10px;
+  padding-bottom: 16px;
 }
 
 .investmentVermelho {
@@ -83,7 +83,7 @@
 .investmentInfoBtns {
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   padding-top: 1rem;
 }
 
